# pyenvclasses

./: .gitignore  LICENSE  Pipfile  README.md  pylintrc  pyproject.toml  pytest.ini  setup.py
.circleci/: config.yml
.github/workflows/: test.yaml
envclasses/: __init__.py
test/: test_envclasses.py
tests/: test_envclasses.py
