[tool.poetry]
name = "pyenvclasses"
version = "0.1.2"
description = "Wrapper for python dataclasses to read from the environment"
authors = ["Ian Baldwin <ian@iantbaldw.in>"]
license = "MIT"
packages = [
    { include = "envclasses" }
]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^6.2"
pytest-cov = "^2.12.1"
pylint = "^2.8.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
